--- a/objarverse/transfer/download_objarverse_glb_clean.yaml
+++ b/objarverse/transfer/download_objarverse_glb_clean.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: dokh-objarverse-download-abc-shape
+  name: dokh-objarverse-download-glb-clean
 spec:
   ttlSecondsAfterFinished: 60
   template:
@@ -11,7 +11,7 @@ spec:
       volumes:
       - name: data
         persistentVolumeClaim:
-          claimName: objarverse-shape
+          claimName: objarverse-clean
       - name: key
         persistentVolumeClaim:
           claimName: key
@@ -20,7 +20,7 @@ spec:
           medium: Memory
           sizeLimit: 64Gi
       containers:
-      - name: objarverse-download-abc-shape
+      - name: objarverse-download-glb-clean
         image: kohido/base_dl_cuda129:v0.0.7
         env:
         - name: PYTHONUNBUFFERED
@@ -40,7 +40,7 @@ spec:
 
             echo "StrictHostKeyChecking no" >> ~/.ssh/config
 
-            sshpass -p ${LOCAL_PASSWORD} scp /mnt/data/objarverse_shape/abc.zip koi@134.226.54.68:/media/koi/Expansion/data/objarverse_shape
+            sshpass -p ${LOCAL_PASSWORD} scp /mnt/data/objarverse_clean/glb.zip koi@134.226.54.68:/media/koi/Expansion/data/objarverse_clean
 
         volumeMounts:
         - {name: data, mountPath: /mnt/data}
