--- a/objarverse/shape_clean_yaml/status.yaml
+++ b/objarverse/shape_clean_yaml/status.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: dokh-objarverse-downloading-status
+  name: dokh-objarverse-cleaning-status
 spec:
   ttlSecondsAfterFinished: 60
   template:
@@ -12,16 +12,16 @@ spec:
       - name: project
         persistentVolumeClaim:
           claimName: prj-0
-      - name: data
+      - name: clean
         persistentVolumeClaim:
-          claimName: objarverse-raw
+          claimName: objarverse-clean
       - name: dshm
         emptyDir:
           medium: Memory
           sizeLimit: 256Gi
       containers:
-      - name: objarverse-objarverse-downloading-status
-        image: kohido/3d_dl_cuda129:v0.0.3
+      - name: objarverse-cleaning-status
+        image: kohido/3d_dl_cuda129:v0.0.4
         env:
         - name: PYTHONUNBUFFERED
           value: "1"
@@ -37,12 +37,12 @@ spec:
             git clone https://github.com/trinity-graphics/3ddata.git
             cd 3ddata/
           fi
-          cd objarverse
-          python3 download_status.py --download_dir /mnt/data/objarverse_raw --status_dir /mnt/data/objarverse_download_status --jobs 48
+          cd objarverse/
+          python3 shape_clean_status --cleaning_dir /mnt/clean/objarverse_clean --status_path /mnt/clean/objarverse_clean/cleaning_status.json
 
         volumeMounts:
         - {name: project, mountPath: /mnt/prj/}
-        - {name: data, mountPath: /mnt/data}
+        - {name: clean, mountPath: /mnt/clean/}
         - {name: dshm, mountPath: /dev/shm}
         resources:
           limits:   { cpu: "48",  memory: "256Gi" }
