--- a/objarverse/analysis_yaml/analysis_base_dae_clean.yaml
+++ b/objarverse/analysis_yaml/analysis_base_dae_clean.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: dokh-objarverse-analysis-base-gltf-clean-batch
+  name: dokh-objarverse-analysis-base-dae-clean
 spec:
   ttlSecondsAfterFinished: 60
   template:
@@ -20,7 +20,7 @@ spec:
           medium: Memory
           sizeLimit: 256Gi
       containers:
-      - name: objarverse-analysis-base-gltf-clean-batch
+      - name: objarverse-analysis-base-dae-clean
         image: kohido/3d_dl_cuda129:v0.0.5
         env:
         - name: PYTHONUNBUFFERED
@@ -38,12 +38,12 @@ spec:
             cd 3ddata/
           fi
           cd objarverse/analysis_script
-          bash analysis_base_gltf_clean_batch.sh 8
+          bash analysis_base_dae_clean.sh
 
         volumeMounts:
         - {name: project, mountPath: /mnt/prj/}
         - {name: clean, mountPath: /mnt/clean/}
         - {name: dshm, mountPath: /dev/shm}
         resources:
-          limits:   { cpu: "96",  memory: "512Gi" }
-          requests: { cpu: "96",  memory: "512Gi" }
+          limits:   { cpu: "48",  memory: "256Gi" }
+          requests: { cpu: "48",  memory: "256Gi" }
