--- a/objarverse/download_yaml/download_abc.yaml
+++ b/objarverse/download_yaml/download_abc.yaml
@@ -25,6 +25,11 @@ spec:
         env:
         - name: PYTHONUNBUFFERED
           value: "1"
+        - name: GITHUB_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: dokh-secret
+              key: GITHUB_TOKEN
         command: ["bash","-lc"]
         args:
         - |
@@ -37,6 +42,10 @@ spec:
             git clone https://github.com/trinity-graphics/3ddata.git
             cd 3ddata/
           fi
+          curl -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/rate_limit
+          curl -I https://api.github.com/users/octocat
           cd objarverse/download_script
           bash run.sh abc
 
