--- a/objarverse/download_yaml/download_usdz.yaml
+++ b/objarverse/download_yaml/download_usdz.yaml
@@ -25,6 +25,11 @@ spec:
         env:
         - name: PYTHONUNBUFFERED
           value: "1"
+        - name: GITHUB_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: dokh-secret
+              key: GITHUB_TOKEN
         command: ["bash","-lc"]
         args:
         - |
@@ -38,6 +43,10 @@ spec:
             cd 3ddata/
           fi
           cd objarverse/download_script
+          curl -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/rate_limit
+          curl -I https://api.github.com/users/octocat
           bash run.sh usdz
 
         volumeMounts:
