--- a/abo/shape_clean_status.yaml
+++ b/abo/shape_clean_status.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: dokh-abo-shape-extraction-status
+  name: dokh-abo-shape-clean-status
 spec:
   ttlSecondsAfterFinished: 60
   template:
@@ -11,13 +11,13 @@ spec:
       volumes:
       - name: data
         persistentVolumeClaim:
-          claimName: objarverse-shape
+          claimName: objarverse-clean
       - name: dshm
         emptyDir:
           medium: Memory
           sizeLimit: 256Gi
       containers:
-      - name: abo-shape-extraction-status
+      - name: abo-shape-clean-status
         image: kohido/3d_dl_cuda129:v0.0.6
         env:
         - name: PYTHONUNBUFFERED
@@ -33,7 +33,7 @@ spec:
           set -e
           cd /mnt/data/abo/3dmodels/obj/
           # Save counts to a log file in the current folder
-          LOG_FILE=shape_status.log
+          LOG_FILE=clean_status.log
           echo "download status: $(date -u)" > "$LOG_FILE"
 
           # Total count of entries in current directory
@@ -45,7 +45,7 @@ spec:
           for i in {0..9}; do
             # If a subdirectory named $i exists, count its entries; otherwise count files in current dir
             if [ -d "$i" ]; then
-              cnt=$(ls -A "$i" 2>/dev/null | wc -l)
+              cnt=$(ls -A "$i" 2>/dev/null | wc -l)cd med
             else
               cnt=$(ls -A 2>/dev/null | wc -l)
             fi
